<resources>
    <string name="app_name">GraduationApplication</string>
    <string name="login_button">Login</string>
    <string name="registration_access">Registration</string>
    <string name="registration_register">Register</string>
    <string name="username_label_hint">Username</string>
    <string name="password_label_hint">Password</string>
    <string name="confirm_password_label_hint">Confirm Password</string>
    <string name="email_label_hint">Email</string>
    <string name="date_of_birth_label_hint">Date Of Birth</string>
    <string name="date_picker_title">Date of Birth:</string>
    <string-array name="gender_label">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="empty_username">Enter your username!\n[5 chars min, 20 chars max]</string>
    <string name="empty_password">Enter your password!\n[6 chars min, 20 chars max]</string>
    <string name="empty_confirmation_password">Confirm your password!</string>
    <string name="password_match">Passwords doesn\'t match!</string>
    <string name="invalid_email">Enter a valid E-Mail!</string>
    <string name="empty_date">Enter the date of your birth!</string>
    <string name="invalid_login">Wrong username or password\nTry again</string>
    <string name="search_label_hint">Medicine Name.....</string>
    <string name="submit_button">Submit</string>
    <string name="user_pin">Security PIN</string>
    <string name="home_page">Home Page</string>
    <string name="order_history">Order History</string>
    <string name="regular_orders">Regular Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="empty_order_page">Nothing in Order History</string>
    <string name="empty_regular_page">Nothing in Regular Orders</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="generate_pin">Generate\nNew PIN</string>
    <string name="recent_qr">Recent QR</string>
    <string name="details_button">Details</string>
    <string name="details_medicine_name_label">Name :</string>
    <string name="details_medicine_concentration_label">Concentration :</string>
    <string name="details_medicine_form_label">Form :</string>
    <string name="details_medicine_price_label">Price :</string>
    <string name="details_medicine_category_label">Category :</string>
    <string name="details_medicine_active_ingredients_label">Active Ingredients :</string>
    <string name="cart_title">Your Cart</string>
    <string name="medicine_name_label_title">Medicine Name</string>
    <string name="medicine_quantity_label_title">Quantity</string>
    <string name="quantity_label_hint">1</string>
    <string-array name="regular_label">
        <item>Not Regular</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="total_payment">Total Payment: </string>
    <string name="next_button">Generate QR</string>
    <string name="share_button">Share</string>
    <string name="save_button">Save</string>
    <string name="save_success">Successfully saved\nImage path: Pictures/QR</string>
    <string name="permission_fail">Cannot save without permission</string>
    <string name="permission_blocked">Permission blocked\nChange manually from settings to continue</string>
    <string name="permission_granted">Permission granted</string>
    <string name="wrong_regex">Only "_" , English characters, and digits are allowed in username</string>
    <string name="no_permission">Permission to use internet should be granted first to check for updates</string>
    <string name="version_warning">Warning: version could be outdated\nenable wifi/mobile data to check for latest updates</string>
    <string name="update_required">Connection to database is required\nPlease enable wifi/mobile data to connect</string>
    <string name="update_complete">Database update is complete!</string>
    <string name="connection_failure">Connection to database failed\nServer may be offline</string>
    <string name="username_exists">This username is already taken\nTry another one</string>
    <string name="email_linked">This email is already linked to another account</string>
    <string name="database_error">A database error occurred\nPlease try again later</string>
    <string name="set_complete">All set!</string>
    <string name="wrong_credentials">Wrong username/password\nMake sure you type them correctly</string>
    <string name="no_internet">No internet connection\nYour order won\'t be synced online until connected</string>
    <string name="connected">Connected!\nYour order will be synced for restoring later</string>
    <string name="resend_verification_email">Resend\nVerification Email</string>
    <string name="verification_failure">Failed to send an email</string>
    <string name="recheck">Recheck completion</string>
    <string name="details_medicine_name">Medicine Name</string>
    <string name="details_medicine_concentration">Medicine Concentration</string>
    <string name="details_medicine_form">Medicine Form</string>
    <string name="details_medicine_price">Medicine Price</string>
    <string name="details_medicine_category">Medicine Category</string>
    <string name="details_medicine_active_ingredients">Medicine Active Ingredients</string>
    <string name="title_activity_qr_generation">QrGeneration</string>
    <string name="out_of_stock_warning">The medicines above are currently out of stock\nHowever, medicines are restocked daily and your request has been successfully synced so you can receive your order tomorrow</string>
    <string name="disclaimer">This is a self-prescribed prescription\nOnly you will be responsible for its results</string>
    <string name="doctor_prescriptions_received">Doctor prescription(s) received!</string>
    <string name="sync_complete">Previously saved prescription(s) received!</string>
</resources>