<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_page"
            android:icon="@drawable/ic_home"
            android:title="@string/home_page" />

        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/order_history" />

        <item
            android:id="@+id/regular_orders"
            android:icon="@drawable/ic_regular"
            android:title="@string/regular_orders" />

    </group>

    <group android:id="@+id/profile"
        android:checkableBehavior="single">

        <item
            android:id="@+id/user_pin"
            android:icon="@drawable/ic_security"
            android:title="@string/user_pin"
            app:actionLayout="@layout/menu_pin"
            android:checkable="false" />

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out" />

    </group>

</menu>