<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:weightSum="24">

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/cart_title"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="24">

        <TextView
            android:id="@+id/medicine_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="14"
            android:text="@string/details_medicine_name" />

        <EditText
            android:id="@+id/medicine_quantity"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:hint="@string/quantity_label_hint"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/medicine_regular_spinner"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:entries="@array/regular_label">
        </Spinner>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:weightSum="9"
        android:gravity="bottom"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/total_payment"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_payment"
            android:gravity="end"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/total_payment_number"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="10.55"
            android:gravity="start"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/cart_next"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next_button"/>

    </LinearLayout>



</LinearLayout>