<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/login_username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_label_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/login_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_label_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/errorMessage"
        android:textAlignment="center"
        android:textAllCaps="true"/>

</LinearLayout>