<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:weightSum="24">

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cart_title"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="24"
        style="?android:listSeparatorTextViewStyle">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="@string/medicine_name_label_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="@string/medicine_quantity_label_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="@string/medicine_repeatly_label_title"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="22">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="9"
        android:gravity="bottom"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/total_payment"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_payment"
            android:gravity="end"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/total_payment_number"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="10.55"
            android:gravity="start"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/generate_qr"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next_button"/>

    </LinearLayout>



</LinearLayout>