<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/medicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/medicine_name_label_title"/>
        <TextView
            android:id="@+id/medicineQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/medicine_quantity_label_title"/>
    </LinearLayout>

    <View
    android:layout_height="2dip"
    android:background="#FF909090"
    android:layout_width="match_parent"
    android:layout_below="@id/details"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_of_stock_warning"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:visibility="gone"
        android:id="@+id/warning"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>