<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context="com.example.ahmed_tarek.graduationapplication.MainActivity">


    <EditText
        android:id="@+id/search_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_label_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/medicine_check_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/medicine_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="Medicine name 1" />

        <Button
            android:id="@+id/medicine_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/details_button" />
    </LinearLayout>

    <Button
        android:id="@+id/search_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button" />

</LinearLayout>
